--- a/style.scss
+++ b/style.scss
@@ -35,14 +35,50 @@ body * {
           &::before {
             position: absolute;
             content: '';
-            height: 145.5px;
+            height: 147.5px;
             width: 100%;
             right: -64px;
-            top: 62px;
+            top: 66px;
             z-index: 7;
             background-image: url("../images/top-1.svg");
             background-repeat: no-repeat;
             background-position: top right;
+          }
+          &::after {
+            position: absolute;
+            content: '';
+            height: 117.5px;
+            width: 100%;
+            right: -64px;
+            bottom: 208px;
+            z-index: 7;
+            background-image: url("../images/bottom-1.svg");
+            background-repeat: no-repeat;
+            background-position: top right;
+          }
+          .fando-card{
+            position: relative;
+            z-index: 8;
+          }
+        }
+        &.left-2{
+          position: relative;
+          &::before {
+            position: absolute;
+            content: '';
+            height: 75.5px;
+            width: 100%;
+            right: -43px;
+            top: 212px;
+            z-index: 7;
+            background-image: url("../images/left-1.svg");
+            background-repeat: no-repeat;
+            background-position: top right;
+          }
+          .fando-card{
+            margin-top: 180px;
+            position: relative;
+            z-index: 8;
           }
         }
         .title {
@@ -58,7 +94,7 @@ body * {
           margin-left: auto;
           margin-right: auto;
           &:not(:last-child) {
-            margin-bottom: 42px;
+            margin-bottom: 36px;
           }
           .fando-card-header {
             background-color: #213c73;
