--- a/style.scss
+++ b/style.scss
@@ -34,7 +34,7 @@ body * {
           position: relative;
           &::before {
             position: absolute;
-            content: '';
+            content: "";
             height: 147.5px;
             width: 100%;
             right: -64px;
@@ -46,7 +46,7 @@ body * {
           }
           &::after {
             position: absolute;
-            content: '';
+            content: "";
             height: 117.5px;
             width: 100%;
             right: -64px;
@@ -56,16 +56,16 @@ body * {
             background-repeat: no-repeat;
             background-position: top right;
           }
-          .fando-card{
+          .fando-card {
             position: relative;
             z-index: 8;
           }
         }
-        &.left-2{
+        &.left-2 {
           position: relative;
           &::before {
             position: absolute;
-            content: '';
+            content: "";
             height: 75.5px;
             width: 100%;
             right: -43px;
@@ -75,7 +75,54 @@ body * {
             background-repeat: no-repeat;
             background-position: top right;
           }
-          .fando-card{
+          .fando-card {
+            margin-top: 180px;
+            position: relative;
+            z-index: 8;
+          }
+        }
+        &.right {
+          position: relative;
+          &::before {
+            position: absolute;
+            content: "";
+            height: 147.5px;
+            width: 108.5px;
+            left: -68px;
+            top: 66px;
+            z-index: 7;
+            background-image: url("../images/top-right-1.svg");
+            background-repeat: no-repeat;
+            background-position: top right;
+          }
+        }
+        &.right-2 {
+          position: relative;
+          &::before {
+            position: absolute;
+            content: "";
+            height: 117.5px;
+            width: 100%;
+            right: -68px;
+            top: 211.5px;
+            z-index: 7;
+            background-image: url("../images/right-1.svg");
+            background-repeat: no-repeat;
+            background-position: top right;
+          }
+          &::after {
+            position: absolute;
+            content: "";
+            height: 75.5px;
+            width: 80.5px;
+            left: -42px;
+            top: 212px;
+            z-index: 7;
+            background-image: url("../images/right-2.svg");
+            background-repeat: no-repeat;
+            background-position: top right;
+          }
+          .fando-card {
             margin-top: 180px;
             position: relative;
             z-index: 8;
@@ -93,6 +140,8 @@ body * {
           display: block;
           margin-left: auto;
           margin-right: auto;
+          position: relative;
+          z-index: 8;
           &:not(:last-child) {
             margin-bottom: 36px;
           }
@@ -156,6 +205,53 @@ body * {
             b {
               display: block;
               font-weight: 800;
+            }
+          }
+        }
+        &.middle{
+          .fando-card{
+            max-width: 248px;
+            &.top-1{
+              margin-bottom: 80px;
+              position: relative;
+              &::before {
+                position: absolute;
+                content: "";
+                height: 80px;
+                width: 2px;
+                left: 50%;
+                top: 100%;
+                z-index: 7;
+                border-left: 1px solid black
+              }
+              .fando-card-body{
+                > div{
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  .team{
+                    flex-direction: column;
+                    align-items: center;
+                    padding-top: 1rem;
+                    padding-bottom: 1rem;
+                    height: auto;
+                    max-height: unset;
+                    border-bottom: none;
+                    .team-name{
+                      white-space: nowrap;
+                    }
+                    .team-color{
+                      margin-right: 0;
+                    }
+                  }
+                  .vs{
+                    color: #213C73;
+                    font-size: 12px;
+                    font-weight: 800;
+                    margin: 0 1rem;
+                  }
+                }
+              }
             }
           }
         }
