--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,6 +160,7 @@ body * {
   text-align: center;
   border-radius: 5px 5px 0 0;
   line-height: 1.215;
+  text-transform: uppercase;
 }
 .teams-map > .row > .col .box .fando-card .fando-card-body .team.type-1 {
   display: flex;
