--- a/style.scss
+++ b/style.scss
@@ -154,6 +154,7 @@ body * {
             text-align: center;
             border-radius: 5px 5px 0 0;
             line-height: 1.215;
+            text-transform: uppercase;
           }
           .fando-card-body {
             .team {
