--- a/style.scss
+++ b/style.scss
@@ -208,6 +208,7 @@ body * {
                   }
                 }
                 .team-name {
+                  text-align: left;
                   margin-bottom: 0;
                   font-size: 12px;
                   font-weight: 700;
